generate swagger doc
